<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_friend_list"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/menu_friendList" />
        <item
            android:id="@+id/nav_task_list"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_TaskList" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
    </group>
</menu>